--- a/nav.html
+++ b/nav.html
@@ -17,8 +17,8 @@
 		<li><a href="music.html" target="main">Music</a></li>
 		<li><a href="videogames.html" target="main">Video Games</a></li>
 		<li><a href="aboutme.html" target="main">About Me</a></li>
-		<li><a href="" target="main">Random</a></li>
-		<li><a href="" target="main">Random</a></li>
+		<li><a href="presentationtemp.html" target="main">Presentation</a></li>
+		
 		
 	</ul>
 	
